<resources>
    <string name="app_name">MAA AdiShakti</string>
    <string name="bhajan">Strotam</string>
    <string name="strotam">Bhajan</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO2</string>
    <string name="todo3">TODO3</string>
    <string name="textview">TextView</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="todoi">image</string>
    <string name="textviewn">\n\n<b>!! महिषासुरमर्दिनी स्तोत्रम्!!</b>
        \n\n\nअयि गिरिनन्दिनि नन्दितमेदिनि विश्वविनोदिनि नन्द नुते
गिरिवरविन्ध्यशिरोऽधिनिवासिनि विष्णुविलासिनि जिष्णुनुते।
भगवति हे शितिकण्ठकुटुम्बिनि भूरिकुटुम्बिनि भूरिकृते
जय जय हे महिषासुरमर्दिनि रम्यकपर्दिनि[१] शैलसुते ॥१॥\n\n\n

सुरवर वर्षिणि दुर्धर धर्षिणि दुर्मुख मर्षिणि हर्षरते
त्रिभुवनपोषिणि शङ्करतोषिणि किल्बिष मोषिणि घोषरते।
दनुजनिरोषिणि दितिसुतरोषिणि दुर्मदशोषिणि सिन्धुसुते
जय जय हे महिषासुरमर्दिनि रम्यकपर्दिनि शैलसुते ॥२॥\n\n\n

अयि जगदम्ब मदम्ब कदम्ब वनप्रिय वासिनि हासरते
शिखरि शिरोमणि तुङ्गहिमालय शृङ्गनिजालय मध्यगते।
मधुमधुरे [२]मधुकैटभ गञ्जिनि कैटभ भञ्जिनि रासरते
जय जय हे महिषासुरमर्दिनि रम्यकपर्दिनि शैलसुते ॥३॥\n\n\n

अयि शतखण्ड विखण्डित रुण्ड वितुण्डित शुंड गजाधिपते
रिपुगजगण्ड विदारणचण्ड पराक्रमशुण्ड मृगाधिपते।
निजभुजदण्ड निपातितखण्ड विपातितमुण्ड भटाधिपते
जय जय हे महिषासुरमर्दिनि रम्यकपर्दिनि शैलसुते ॥४॥
 \n\n\n
अयि रणदुर्मद शत्रुवधोदित दुर्धरनिर्जर शक्तिभृते
चतुरविचार धुरीणमहाशिव दूतकृत प्रमथाधिपते।
दुरितदुरीह दुराशयदुर्मति दानवदूत कृतान्तमते
जय जय हे महिषासुरमर्दिनि रम्यकपर्दिनि शैलसुते ॥५॥\n\n\n

अयि शरणागत वैरिवधुवर वीरवराभय दायकरे
त्रिभुवनमस्तक शुलविरोधि शिरोऽधिकृतामल शुलकरे।
दुमिदुमितामर धुन्दुभिनाद महोमुखरीकृत दिङ्मकरे
जय जय हे महिषासुरमर्दिनि रम्यकपर्दिनि शैलसुते ॥६॥\n\n\n

अयि निजहुङ्कृति मात्रनिराकृत धूम्रविलोचन धूम्रशते
समरविशोषित शोणितबीज समुद्भव शोणित बीजलते।
शिवशिवशुम्भ निशुम्भमहाहव तर्पितभूत पिशाचरते
जय जय हे महिषासुरमर्दिनि रम्यकपर्दिनि शैलसुते ॥७॥\n\n\n

धनुरनुषङ्ग रणक्षणसङ्ग परिस्फुरदङ्ग नटत्कटके
कनकपिशङ्ग पृषत्कनिषङ्ग रसद्भटशृङ्ग हतावटुके।
कृतचतुरङ्ग बलक्षितिरङ्ग घटद्बहुरङ्ग रटद्बटुके
जय जय हे महिषासुरमर्दिनि रम्यकपर्दिनि शैलसुते ॥८॥\n\n\n

सुरललना ततथेयि तथेयि कृताभिनयोदर नृत्यरते
कृत कुकुथः कुकुथो गडदादिकताल कुतूहल गानरते।
धुधुकुट धुक्कुट धिंधिमित ध्वनि धीर मृदंग निनादरते
जय जय हे महिषासुरमर्दिनि रम्यकपर्दिनि शैलसुते॥९॥\n\n\n

जय जय जप्य जयेजयशब्द परस्तुति तत्परविश्वनुते
झणझणझिञ्झिमि झिङ्कृत नूपुर शिञ्जितमोहित भूतपते।
नटित नटार्ध नटी नट नायक नाटितनाट्य सुगानरते
जय जय हे महिषासुरमर्दिनि रम्यकपर्दिनि शैलसुते ॥१०॥\n\n\n

अयि सुमनःसुमनःसुमनः सुमनःसुमनोहरकान्तियुते
श्रितरजनी रजनीरजनी रजनीरजनी करवक्त्रवृते।
सुनयनविभ्रमर भ्रमरभ्रमर भ्रमरभ्रमराधिपते
जय जय हे महिषासुरमर्दिनि रम्यकपर्दिनि शैलसुते ॥११॥\n\n\n

सहितमहाहव मल्लमतल्लिक मल्लितरल्लक मल्लरते
विरचितवल्लिक पल्लिकमल्लिक झिल्लिकभिल्लिक वर्गवृते।
शितकृतफुल्ल समुल्लसितारुण तल्लजपल्लव सल्ललिते
जय जय हे महिषासुरमर्दिनि रम्यकपर्दिनि शैलसुते ॥१२॥\n\n\n

अविरलगण्ड गलन्मदमेदुर मत्तमतङ्ग जराजपते
त्रिभुवनभुषण भूतकलानिधि रूपपयोनिधि राजसुते।
अयि सुदतीजन लालसमानस मोहन मन्मथराजसुते
जय जय हे महिषासुरमर्दिनि रम्यकपर्दिनि शैलसुते ॥ १३॥\n\n\n

कमलदलामल कोमलकान्ति कलाकलितामल भाललते
सकलविलास कलानिलयक्रम केलिचलत्कल हंसकुले।
अलिकुलसङ्कुल कुवलयमण्डल मौलिमिलद्बकुलालिकुले
जय जय हे महिषासुरमर्दिनि रम्यकपर्दिनि शैलसुते ॥ १४॥\n\n\n

करमुरलीरव वीजितकूजित लज्जितकोकिल मञ्जुमते
मिलितपुलिन्द मनोहरगुञ्जित रञ्जितशैल निकुञ्जगते।
निजगुणभूत महाशबरीगण सद्गुणसम्भृत केलितले
जय जय हे महिषासुरमर्दिनि रम्यकपर्दिनि शैलसुते ॥ १५॥\n\n\n

कटितटपीत दुकूलविचित्र मयुखतिरस्कृत चन्द्ररुचे
प्रणतसुरासुर मौलिमणिस्फुर दंशुलसन्नख चन्द्ररुचे।
जितकनकाचल मौलिमदोर्जित निर्भरकुञ्जर कुम्भकुचे
जय जय हे महिषासुरमर्दिनि रम्यकपर्दिनि शैलसुते ॥ १६॥\n\n\n

विजितसहस्रकरैक सहस्रकरैक सहस्रकरैकनुते
कृतसुरतारक सङ्गरतारक सङ्गरतारक सूनुसुते।
[३]सुरथसमाधि समानसमाधि समाधिसमाधि सुजातरते
जय जय हे महिषासुरमर्दिनि रम्यकपर्दिनि शैलसुते ॥ १७॥\n\n\n

पदकमलं करुणानिलये वरिवस्यति योऽनुदिनं सुशिवे
अयि कमले कमलानिलये कमलानिलयः स कथं न भवेत्।
तव पदमेव परम्पदमित्यनुशीलयतो मम किं न शिवे
जय जय हे महिषासुरमर्दिनि रम्यकपर्दिनि शैलसुते ॥ १८॥\n\n\n

कनकलसत्कल सिन्धुजलैरनु षिञ्चति ते गुण रङ्गभुवम्
भजति स किं न शचीकुचकुम्भ तटीपरिरम्भ सुखानुभवम्।
तव चरणं शरणं करवाणि नतामरवाणि निवासि शिवम्
जय जय हे महिषासुरमर्दिनि रम्यकपर्दिनि शैलसुते ॥ १९॥\n\n\n

तव विमलेन्दुकुलं वदनेन्दुमलं सकलं ननु कूलयते
किमु पुरुहूतपुरीन्दुमुखी सुमुखीभिरसौ विमुखीक्रियते।
मम तु मतं शिवनामधने भवती कृपया किमुत क्रियते
जय जय हे महिषासुरमर्दिनि रम्यकपर्दिनि शैलसुते ॥ २०॥
\n\n\n
अयि मयि दीन दयालुतया कृपयैव त्वया भवितव्यमुमे
अयि जगतो जननी कृपयासि यथासि तथानुमितासिरते।
यदुचितमत्र भवत्युररी कुरुतादुरुतापमपाकुरुते
जय जय हे महिषासुरमर्दिनि रम्यकपर्दिनि शैलसुते ॥ २१॥\n\n\</string>
    <string name="textview9">JAI MATA DI</string>
    <string name="todox">TODOx</string>
    <string name="all_rights_are_reserved">All rights are reserved.</string>
</resources>