<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/durga" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button5"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:onClick="openBhajan"
                android:shadowColor="#009688"
                android:text="@string/bhajan"
                android:textColor="#F44336"
                android:textColorHighlight="#009688"
                android:textColorLink="#D61A1A"
                android:textSize="34sp"
                android:textStyle="bold"
                app:rippleColor="#009688"
                app:strokeColor="#009688"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/button6"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:onClick="openStrotam"
                android:text="@string/strotam"
                android:textColor="#689F38"
                android:textSize="34sp"
                android:textStyle="bold"
                tools:ignore="VisualLintButtonSize" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>